[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://Img/title/large/resume1.png" type="Texture" id=2]
[ext_resource path="res://Img/title/large/resume3.png" type="Texture" id=3]
[ext_resource path="res://Img/title/large/resume2.png" type="Texture" id=4]
[ext_resource path="res://Img/title/large/menu1.png" type="Texture" id=5]
[ext_resource path="res://Img/title/large/menu3.png" type="Texture" id=6]
[ext_resource path="res://Img/title/large/menu2.png" type="Texture" id=7]
[ext_resource path="res://Img/title/large/exitOS1.png" type="Texture" id=8]
[ext_resource path="res://Img/title/large/exitOS3.png" type="Texture" id=9]
[ext_resource path="res://Img/title/large/exitOS2.png" type="Texture" id=10]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Pause" type="Control"]
pause_mode = 2
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
use_parent_material = true
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 0.52549 )

[node name="MarginContainer" type="MarginContainer" parent="."]
use_parent_material = true
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
use_parent_material = true
margin_left = 385.0
margin_top = 236.0
margin_right = 1535.0
margin_bottom = 844.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="TextureButton" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
margin_right = 1150.0
margin_bottom = 200.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="MainMenu" type="TextureButton" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
margin_top = 204.0
margin_right = 1150.0
margin_bottom = 404.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="QuitOS" type="TextureButton" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
margin_top = 408.0
margin_right = 1150.0
margin_bottom = 608.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitOS" to="." method="_on_QuitOS_pressed"]
